# ellipsoids

./: CMakeLists.txt  HarPelet.cpp  HarPelet.hpp  Malandain.cpp  Malandain.hpp  Petunin.cpp  Petunin.hpp  helpers.cpp  helpers.hpp  test.cpp  types.hpp
